# bf

./: .gitignore  CMakeLists.txt  Makefile  README.md  bf.c  bf.cc  test.sh  texttobf.cc
examples/: arch.bf  fat_llvm.bf  llvm.bf
